--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@
 local.properties
 .idea/gradle.xml
 .idea/vcs.xml
+.idea/*
+.idea/gradle.xml
+.idea/misc.xml
+.idea/vcs.xml
+.idea/gradle.xml
+.idea/misc.xml
+.idea/vcs.xml
